src/main/kotlin/com/example/cantinabackend/web/errors/UnauthorizedException.kt
package io.planer.shifts.web.errors

class UnauthorizedException(message: String) : RuntimeException(message)